# pyIntertidalDEM

./: .gitignore  .travis.yml  DataCHECKRough.txt  LICENSE  MANIFEST.in  ModuleSentiniel2.py  Output.txt  OutputLogger.py  README.md  Sentiniel2AlphaCheck_Testing.py  Sentiniel2AtmosphereTest.py  Sentiniel2ChannelData.py  Sentiniel2DataFilter.py  Sentiniel2DataTest.py  Sentiniel2DataTesting.py  Sentiniel2GeoData.py  Sentiniel2GeoMask.py  Sentiniel2HSVData.py  Sentiniel2HueVal.py  Sentiniel2Image.py  Sentiniel2Info.py  Sentiniel2Logger.py  Sentiniel2Preprocessor.py  Sentiniel2Processor.py  Sentiniel2RGBProcessor.py  Sentiniel2RiverOutline.py  Sentiniel2TiffData.py  Sentiniel2Visualize.py  allImports.py  dataExtractor.py  depcheck.py  environment.yml  environment_linux.yml  environment_win.yml  example.py  example_analysis.py  example_extract.py  example_mask.py  initializer.py  main.py  (+5 more)
DataAnalysis/: DataList.py  DataTrain.py
DataPreprocess/: Sentinel2DBStat.py  Sentiniel2DataExtractor.py  Sentiniel2WaterMask.py
examples/: 01_download_dataset.ipynb  02_generate_mask.ipynb  03_extract_shoreline.ipynb  03_extract_shoreline.py  04_reference.ipynb  05_generate_interpolate_mask.ipynb  step_1_5_crop_clean.py  step_2_create_mask.py  step_3_analysis.py
improc/: HSV_processor.py  __init__.py  band_processor.py  binarymap_processor.py  filter.py  latlon.py
preprep/: __init__.py  extractor.py  statistics_generator.py  watermask_generator.py
pyintdem/: __init__.py  copernicus.py  core.py  coverage.py  data.py  dem.py  geometry.py  gridding.py  improc.py  preprep.py  theia.py  (+6 more)
(+18 files in other folders)
